<resources>
    <string name="app_name">Android Boilerplate</string>

    <string name="commons_error_title">We hit a bump</string>
    <string name="commons_error_message">Something went wrong.Please try again.</string>
    <string name="common_network_msg">Unstable internet connection. Please try again later.</string>
    <string name="common_something_went_wrong_msg">Something went wrong. Please try again later.</string>
    <string name="login_email_hint">Username or Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_articles_title">Articles</string>
    <string name="create_article_txt">Create Article</string>
    <string name="sample_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="logout_loading_lbl">Logging out…</string>
    <string name="logout_title_lbl">We hate to see you leave.</string>
    <string name="logout_desc_lbl">Continue signing out?</string>
    <string name="logout_btn">Logout</string>
    <string name="scan_qr_code_desc">Place the markers around the\nQR code to begin scanning.</string>
    <string name="scan_qr_code_title">Scan QR Code</string>
    <string name="invalid_qr_code_msg">Invalid QR Code</string>
    <string name="loading">loading....</string>
    <string name="services_qr_scan_qr_code">Scan QR Code</string>
    <string name="services_qr_place_the_markers_around_the">Place the markers around the</string>
    <string name="services_qr_code_to_begin_scanning">QR code to begin scanning.</string>
    <string name="services_qr_if_the_scanner_is_not_working">If the scanner is not working,</string>
    <string name="services_qr_input_reference_code">input account number.</string>
    <string name="services_qr_scan_the_qr_code">scan the QR Code.</string>
    <string name="check_lbl">Check Account Number </string>
    <string name="services_zqr_reference_code">Account Number</string>
    <string name="logout_cancel_btn">Cancel</string>
    <string name="login_loading">Logging in...</string>
    <string name="create_article_loading">Creating Article...</string>
    <string name="payments">Payments</string>
    <string name="sign_up"><u>Create Account</u></string>
    <string name="title_name">POS with Inventory </string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="menu">Menu</string>
    <string-array name="spinner_roles">
        <item>Admin</item>
        <item>Customer</item>

    </string-array>
</resources>