<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayDark">

    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/scannerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dimen_15"
            android:paddingEnd="@dimen/dimen_15">

            <ImageView
                android:id="@+id/dismissImageView"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:padding="@dimen/dimen_4"
                android:src="@drawable/ic_round_clear_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/qrImageView"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:padding="3dp"
                android:visibility="invisible"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qrVIEW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/objective_regular"
                android:gravity="center"
                android:text="@string/scan_qr_code_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/objective_regular"
                android:gravity="center"
                android:text="@string/scan_qr_code_desc"
                android:textColor="@color/white"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_20"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:hint="Account Number"
            app:boxBackgroundColor="@color/white"
            app:hintAnimationEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/refCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/objective_regular"
                android:gravity="center"
                android:hint="Account Number"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:fontFamily="@font/objective_regular"
            android:gravity="center"
            android:text="@string/services_qr_if_the_scanner_is_not_working"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/objective_regular"
            android:gravity="center"
            android:text="@string/services_qr_input_reference_code"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/checkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@drawable/bg_rounded_button"
            android:fontFamily="@font/objective_regular"
            android:gravity="center"
            android:padding="@dimen/dimen_15"
            android:text="@string/check_lbl"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

</RelativeLayout>